* Applied patch to dragdrop.js to fix offset problem when dragging between divs with different scrollbar positions.   Patch was applied by hand, line-by-line, from http://dev.rubyonrails.org/attachment/ticket/5518/adjust_scrolling_offsets.diff.   Hopefully I didn't fuck it up.  I retained the original dragdrop.js before the patch (and after my own modifications)   for reference.

--- a/public/stylesheets/quadtask.css
+++ b/public/stylesheets/quadtask.css
@@ -276,3 +276,8 @@ ul, li
     float: right;
     cursor: pointer;
 }
+
+.quadshift
+{
+    font-weight: 700;
+}
